--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "BuddyForms/BuddyForms-WooCommerce-Form-Elements",
+  "name": "themekraft/buddyforms-wc-form-elements",
   "description": "Let your WooCommerce Vendors Manage there Products from the Frontend",
   "keywords": [
     "buddypress",
@@ -15,40 +15,7 @@
   "license": "Apache-2.0",
   "minimum-stability": "dev",
   "require-dev": {
-    "phpunit/phpunit": "^6.1",
-    "php-coveralls/php-coveralls": "^2.0@dev",
-    "squizlabs/php_codesniffer": "3.*",
-    "friendsofphp/php-cs-fixer": "^2.9",
-    "jakub-onderka/php-parallel-lint": "dev-master",
-    "jakub-onderka/php-console-highlighter": "dev-master",
-    "wp-coding-standards/wpcs": "dev-master",
-    "symplify/easy-coding-standard": "^5.2@dev"
-  },
-  "scripts": {
-    "tests": "composer fixes && composer lints",
-    "sniffs": [
-      "phpcs --report=full --colors -p --standard=phpcs.xml --ignore=*/vendor/*,*/node_modules/* includes/ --report=diff -v",
-      "phpcs --report=full --colors -p --standard=phpcs.xml --ignore=*/vendor/*,*/node_modules/* loader.php --report=diff -v"
-    ],
-    "sniffs-fix": [
-      "phpcbf --report=full --colors -p --standard=phpcs.xml --ignore=*/vendor/*,*/node_modules/* includes/ --report=diff -v",
-      "phpcbf --report=full --colors -p --standard=phpcs.xml --ignore=*/vendor/*,*/node_modules/* loader.php --report=diff -v"
-    ],
-    "fixes": [
-      "ecs check includes --fix",
-      "ecs check loader.php --fix"
-    ],
-    "lints": [
-      "parallel-lint ./includes  --blame --exclude vendor",
-      "parallel-lint ./loader.php  --blame --exclude vendor"
-    ],
-    "phpcs-setup": "./vendor/bin/phpcs --config-set installed_paths vendor/wp-coding-standards/wpcs",
-    "phpcbf-setup": "./vendor/bin/phpcbf --config-set installed_paths vendor/wp-coding-standards/wpcs",
-    "post-install-cmd": "composer phpcs-setup && composer phpcbf-setup",
-    "post-update-cmd": "composer phpcs-setup && composer phpcbf-setup",
-    "package": "sh .tk/package.sh loader",
-    "wp-release": "sh .tk/wp_release.sh",
-    "beta-release": "sh .tk/full-deploy.sh loader 415 false beta",
-    "full-release": "sh .tk/full-deploy.sh loader 415 false released"
+    "consolidation/robo": "^1.0.0",
+    "bamarni/composer-bin-plugin": "dev-master"
   }
 }
